[gd_scene load_steps=11 format=3 uid="uid://buqvr00anmyup"]

[ext_resource type="Script" uid="uid://b6nmhejgiyqyo" path="res://scripts/level_complete.gd" id="1_r8gc7"]
[ext_resource type="PackedScene" uid="uid://bmuu7gov5nfwd" path="res://scene_objects/title_bar.tscn" id="2_tbhi8"]
[ext_resource type="PackedScene" uid="uid://oq5258by1a1k" path="res://scene_objects/menu_button.tscn" id="3_1njab"]
[ext_resource type="Texture2D" uid="uid://ciddnlhcacvjl" path="res://assets/textures/stars_unfilled.webp" id="3_ulwen"]
[ext_resource type="Texture2D" uid="uid://d3ubas71s5u06" path="res://assets/textures/stars_filled.webp" id="4_eejmd"]
[ext_resource type="AudioStream" uid="uid://b2qimqv0cw1t6" path="res://assets/sfx/Notification, Attention, Short Phrase, Positive Achievement, Win, Video Game 05.ogg" id="9_exh43"]
[ext_resource type="AudioStream" uid="uid://dwdchymwssfrb" path="res://assets/sfx/lose.ogg" id="10_b0n70"]
[ext_resource type="AudioStream" uid="uid://bx654q2xltdwj" path="res://assets/sfx/nice.ogg" id="10_d1f10"]
[ext_resource type="LabelSettings" uid="uid://c2qlpe3wovecb" path="res://resources/grade_comment_label_settings.tres" id="11_fjy77"]
[ext_resource type="AudioStream" uid="uid://be2uwixl3k0dq" path="res://assets/sfx/bad.ogg" id="11_wn0fp"]

[node name="LevelCompleteScreen" type="Control"]
process_mode = 3
custom_minimum_size = Vector2(320, 180)
layout_mode = 3
anchors_preset = 0
offset_right = 1920.0
offset_bottom = 1080.0
scale = Vector2(0.167, 0.167)
script = ExtResource("1_r8gc7")

[node name="background" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1080.0
color = Color(0.113725, 0.133333, 0.160784, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="background"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 4.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme_override_constants/separation = 20

[node name="Title" parent="background/VBoxContainer" instance=ExtResource("2_tbhi8")]
layout_mode = 2
text = "Level complete!"

[node name="Label" type="Label" parent="background/VBoxContainer"]
custom_minimum_size = Vector2(0, 400)
layout_mode = 2

[node name="grade" type="TextureProgressBar" parent="background/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
max_value = 10.0
value = 1.0
texture_under = ExtResource("3_ulwen")
texture_progress = ExtResource("4_eejmd")
tint_over = Color(1, 0.27451, 1, 1)

[node name="nextLevelButton" parent="background/VBoxContainer" instance=ExtResource("3_1njab")]
unique_name_in_owner = true
custom_minimum_size = Vector2(800, 100)
layout_mode = 2
theme_override_font_sizes/font_size = 50
disabled = true
text = "Next level"

[node name="HBoxContainer" type="HBoxContainer" parent="background/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="mainMenuButton" parent="background/VBoxContainer/HBoxContainer" instance=ExtResource("3_1njab")]
unique_name_in_owner = true
custom_minimum_size = Vector2(400, 75)
layout_mode = 2
theme_override_font_sizes/font_size = 30
disabled = true
text = "Back to level selection"

[node name="replayButton" parent="background/VBoxContainer/HBoxContainer" instance=ExtResource("3_1njab")]
unique_name_in_owner = true
custom_minimum_size = Vector2(400, 75)
layout_mode = 2
theme_override_font_sizes/font_size = 30
disabled = true
text = "Replay"

[node name="achievementSound" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("9_exh43")
bus = &"sfx"

[node name="niceSound" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("10_d1f10")
bus = &"sfx"

[node name="badSound" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("11_wn0fp")
bus = &"sfx"

[node name="loseSound" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("10_b0n70")
bus = &"sfx"

[node name="reactionText" type="Label" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 0
offset_top = 291.0
offset_right = 1920.0
offset_bottom = 658.0
text = "Almost perfect!"
label_settings = ExtResource("11_fjy77")
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="background/VBoxContainer/nextLevelButton" to="." method="load_next_level"]
[connection signal="pressed" from="background/VBoxContainer/HBoxContainer/mainMenuButton" to="." method="return_to_main_menu"]
[connection signal="pressed" from="background/VBoxContainer/HBoxContainer/replayButton" to="." method="reload_current_level"]
